Added some final touches for the functionality, fixed the image upload logic...

--- a/conference-ticket-generator-main/index.html
+++ b/conference-ticket-generator-main/index.html
@@ -34,8 +34,10 @@
     <div class="form1">
         <h6>Upload Avatar</h6>
         <div id="drop-zone">
-            <div class="drop-icon-container"><img class="drop-icon" src="./assets/images/icon-upload.svg" alt=""></div> Drag and drop or click to upload</div>
-    </div> <input type="file" id="file-input" accept="image/*" style="display: none;">
+            <div class="drop-icon-container"><img class="drop-icon" src="./assets/images/icon-upload.svg" alt=""></div> Drag and drop or click to upload
+        </div>
+    </div>
+    <input type="file" id="fileInput" accept="image/*" style="display: none;">
     <p class="upload-info"> <img src="./assets/images/icon-info.svg" alt=""> Upload your photo (JPG or PNG, max size: 500KB).</p>
     <div class="inputbox">
         <form id="myForm">
@@ -52,6 +54,7 @@
 
     <script src="index.js"></script>
     <script src="validation.js"></script>
+    <script src="ticket.js"></script>
 </body>
 
 </html>
